# demo

./: .gitignore  .pgenie1.yaml  .pgn1.yaml  README.md  build.bash  freeze1.pgn.yaml  project1.pgn.yaml
artifacts/rust/: Cargo.toml
artifacts/rust/migrations/: 1.sql  3.sql  5.sql  6.sql
artifacts/rust/src/: lib.rs  mapping.rs  statements.rs  types.rs
artifacts/rust/src/mapping/: decoding_error.rs  error.rs  mod.rs
artifacts/rust/src/statements/: insert_album.rs  insert_multiple_albums.rs  select_album_by_format.rs  select_album_by_id.rs  select_album_by_name.rs  select_album_fields.rs  select_album_rows.rs  select_album_with_filters.rs  select_album_with_tracks.rs  select_genre_by_artist.rs  select_track_info.rs  update_album_recording_returning.rs  update_album_released.rs
artifacts/rust/src/types/: album.rs  album_format.rs  disc_info.rs  recording_info.rs  track_info.rs
artifacts/rust/tests/: tests.rs
migrations/: 1.sql  2.sql  4.sql  5.sql
queries/: insert-album.sql  insert_album.sig1.pgn.yaml  insert_album.sql  insert_multiple_albums.sig1.pgn.yaml  insert_multiple_albums.sql  select-album-by-artist.sql  select-genre-by-artist.sql  select_album_by_format.sig1.pgn.yaml  select_album_by_format.sql  select_album_by_id.sig1.pgn.yaml  select_album_by_id.sql  select_album_by_name.sig1.pgn.yaml  select_album_by_name.sql  select_album_fields.sig1.pgn.yaml  select_album_fields.sql  select_album_rows.sig1.pgn.yaml  select_album_rows.sql  select_album_with_filters.sig1.pgn.yaml  select_album_with_filters.sql  select_album_with_tracks.sig1.pgn.yaml  (+11 more)
(+122 files in other folders)
